Asp change log
==============

The following is a history of changes to the Asp software, in reverse
chronological order.

Changes
-------

Version 1.2.2.1 (compiler 1.2.1.1, engine 1.2.1.0):
- Compiler:
  - Renamed the -s option (silent) to -q (quiet) to be compatible with the aspg
    command. Note that the -s option is still accepted.
- Application specification generator:
  - Added command line options -c and -s to specify the name or directories of
    output files.
  - Added some reporting. It may be squelched via the -q command line option.
  - Added -v option to print version information and exit.

Version 1.2.2.0 (compiler 1.2.1.0, engine 1.2.1.0):
- Engine.
  - Changed the default value of the script-callable int function's check
    parameter to False, and changed the function's behaviour in this case to
    return None for out-of-range floating-point values and malformed strings,
    allowing scripts to test for invalid input.
    - NOTE: The check parameter should now be considered obsolescent and may be
      removed in a future version.
  - Changed the behaviour of the script-callable float function to return None
    for malformed string input instead of raising an error and ending the
    script.
- Standalone application:
  - Added handling of user interrupts so that final reports are still generated
    when a user interrupts the run.

Version 1.2.1.0 (compiler 1.2.1.0, engine 1.2.0.2):
- Compiler:
  - Added support for binary integer constants (e.g., 0xb10101).
  - Added support for using underscores (_) as separators within numeric
    constants, as in Python (e.g., 0b1001_0101).
- Application specification generator:
  - Permitted the use of a + prefix on numeric constants.

Version 1.2.0.3 (compiler 1.2.0.2, engine 1.2.0.2):
- Fixed issues that caused compilation to fail with Windows Visual Studio.

Version 1.2.0.2 (compiler 1.2.0.1, engine 1.2.0.2):
- Cleaned up the code according to static analysis results. No changes to